# hlsdk-portable

./: CMakeLists.txt
cl_dll/: CMakeLists.txt  ammohistory.h  ev_hldm.cpp  ev_hldm.h  hud.cpp  hud.h  hud_msg.cpp  message.cpp  sanity.cpp  saytext.cpp  statusbar.cpp  vgui_CustomObjects.cpp  vgui_TeamFortressViewport.h  voice_status.cpp
cl_dll/hl/: hl_baseentity.cpp  hl_events.cpp  hl_objects.cpp  hl_weapons.cpp
common/: const.h
dlls/: CMakeLists.txt  Chicken.cpp  ClimbingMonster.cpp  Cthonian.cpp  Dagger.cpp  DeepOne.cpp  DimensionalShambler.cpp  DimensionalShambler.h  DunwichHorror.cpp  FormlessSpawn.cpp  Gangster.cpp  Gangster.h  GreatRace.cpp  GreatRace.h  HuntingHorror.cpp  NightGaunt.cpp  PowderOfIbn.cpp  Priest.cpp  Priest.h  SerpentMan.cpp  SerpentMan.h  SerpentStaff.cpp  SirHenry.cpp  SirHenry.h  Stukabat.cpp  SwordCane.cpp  TRex.cpp  Yodan.cpp  Yodan.h  aflock.cpp  agrunt.cpp  alien_egg.cpp  apache.cpp  barney.cpp  basemonster.h  bigmomma.cpp  bm.cpp  bm.h  bmodels.cpp  book.cpp  (+88 more)
engine/: progdefs.h
pm_shared/: pm_shared.c
